WEB-3075 Updated button styling to prevent wrapping

--- a/fid-web/src/main/webapp/style/newCss/asset/actions-menu.css
+++ b/fid-web/src/main/webapp/style/newCss/asset/actions-menu.css
@@ -12,7 +12,7 @@
 }
 
 .actions ul {
-    width: 75px;
+    width: 80px;
 }
 
 .menu-items {
